# dh

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rustfmt.yml
src/: data.rs  dynamic.rs  error.rs  file.rs  lib.rs  limited.rs  prelude.rs  primitive.rs  read.rs  rw.rs  seek.rs  type.rs  types.rs  variable.rs  write.rs
src/data/: ref.rs
src/read/: at.rs  auto_impl.rs  force.rs  force_be.rs  force_le.rs  force_ne.rs  val.rs  val_be.rs  val_le.rs  val_ne.rs
src/write/: at.rs  val.rs
tests/: copy.rs  data.rs  data_ref.rs  file.rs  limited.rs  read.rs  read_at.rs  read_be.rs  read_force.rs  read_force_le.rs  read_le.rs  read_ne.rs  write.rs  write_at.rs
tests/samples/: 001
