[package]
name = "dh"
version = "0.2.0"
edition = "2021"
description = "Data handling in Rust, made easy."
license = "MIT"
repository = "https://github.com/Le0X8/dh"
documentation = "https://docs.rs/dh"
authors = [ "Leonard Lesinski <84378319+Le0X8@users.noreply.github.com>" ]
readme = "README.md"
keywords = [ "data", "files", "read", "write", "rw" ]
categories = [ "data-structures", "encoding", "filesystem", "parsing" ]

[dependencies]
fs4 = "0.9.1"
