[package]
name = "dh"
version = "0.8.0"
edition = "2021"
description = "Data handling in Rust, made easy."
license = "MIT"
repository = "https://github.com/Le0X8/dh"
documentation = "https://docs.rs/dh"
authors = [ "Leonard Lesinski <84378319+Le0X8@users.noreply.github.com>" ]
readme = "README.md"
keywords = [ "data", "files", "read", "write", "rw" ]
categories = [ "data-structures", "encoding", "filesystem", "parsing" ]

[dependencies]

[dev-dependencies]
murmur3 = "0.5.2"